# cmake_learning

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/libs/logger/: CMakeLists.txt  logger.cpp  logger.h  logger_export.h
src/libs/math/: CMakeLists.txt  add.cpp  add.h
